--- a/toc.yaml
+++ b/toc.yaml
@@ -119,3 +119,11 @@ toc:
       - ts-max-connections.md
       - ts-no-space-left.md
       - ts-long-term-queries.md
+  - navgroup:
+      id: help
+      topics:
+      - topicgroup:
+          label: FAQs
+          topics:
+          - availability-zones-faq.md
+          - status-page-faq.md
