--- a/toc.yaml
+++ b/toc.yaml
@@ -13,7 +13,10 @@ toc:
   entries: 
   - navgroup: 
       id: learn
-      topics: 
+      topics:
+      - link:
+          label: IBM Cloud Databases
+          href: https://cloud.ibm.com/docs/cloud-databases
       - getting-started.md
       - include: ../cloud-databases/learn-getting-to-production.md
       - link: 
