--- a/toc.yaml
+++ b/toc.yaml
@@ -10,47 +10,47 @@ toc:
     product-page: https://www.ibm.com/cloud/databases-for-postgresql
     path: databases-for-postgresql
     label: Databases For PostgreSQL
-  entries: 
-  - navgroup: 
+  entries:
+  - navgroup:
       id: learn
       topics:
       - link:
           label: IBM Cloud Databases
           href: https://cloud.ibm.com/docs/cloud-databases
-      - getting-started.md
+      - getting-started-pg.md
       - include: ../cloud-databases/learn-getting-to-production.md
-      - link: 
+      - link:
           label: What is PostgreSQL?
           href: https://www.ibm.com/cloud/learn/postgresql
-      - learn-dashboard-overview.md 
-      - learn-high-availability.md 
-      - learn-performance.md 
+      - learn-dashboard-overview.md
+      - learn-high-availability.md
+      - learn-performance.md
       - learn-pricing.md
       - release-notes.md
-  - navgroup: 
+  - navgroup:
       id: howto
       topics:
       - howto-provisioning.md
-      - howto-user-management.md 
-      - topicgroup: 
+      - howto-user-management.md
+      - topicgroup:
           label: IBM Cloud Databases (ICD) enabled by IBM Cloud Satellite
-          topics: 
+          topics:
           - include: ../cloud-databases/howto-sat-loc.md
           - include: ../cloud-databases/howto-sat-loc-aws.md
-          - include: ../cloud-databases/howto-sat-loc-onprem.md 
+          - include: ../cloud-databases/howto-sat-loc-onprem.md
       - howto-getting-connection-strings.md
       - include: ../cloud-databases/howto-deprovisioning.md
       - include: ../cloud-databases/closures.md
       - include: ../cloud-databases/ha-dr.md
-      - topicgroup: 
+      - topicgroup:
           label: Connecting to Databases for PostgreSQL
-          topics: 
+          topics:
           - connecting-external.md
           - connecting-ibmcloud-app.md
           - connecting-psql.md
-      - topicgroup: 
+      - topicgroup:
           label: Managing Resources
-          topics: 
+          topics:
           - howto-resources-scaling.md
           - howto-autoscaling.md
           - howto-horizontal-scaling.md
@@ -59,27 +59,28 @@ toc:
       - howto-pitr.md
       - include: ../cloud-databases/howto-allowlists.md
       - howto-migration.md
-      - topicgroup: 
+      - topicgroup:
           label: Replication
-          topics: 
+          topics:
           - howto-read-replica.md
+          - howto-ha-read-replica.md
           - howto-logical-replication.md
           - link:
               label: Upgrading PostgreSQL with Minimal Downtime using logical replication
               href: https://www.ibm.com/blog/upgrading-ibm-cloud-databases-for-postgresql-with-minimal-downtime/
-          - howto-ha-rr.md
       - howto-upgrading.md
-      - topicgroup: 
+      - topicgroup:
           label: Configuring PostgreSQL
-          topics: 
+          topics:
           - howto-changing-config.md
           - howto-extensions.md
           - howto-wal2json.md
           - howto-pgaudit.md
           - howto-icu.md
-      - topicgroup: 
+      - topicgroup:
           label: Tutorials
-          topics: 
+          topics:
+          - howto-deploy-pgadmin-tutorial.md
           - include: ../cloud-databases/howto-tutorials.md
           - include: ../cloud-databases/hello-world-tutorial.md
           - include: ../cloud-databases/terra-postgres-tutorial.md
@@ -89,19 +90,19 @@ toc:
           - include: ../cloud-databases/disk-util-alerts-tutorial.md
       - topicgroup:
           label: Logging and monitoring
-          topics: 
+          topics:
           - include: ../cloud-databases/reference-activity-tracker.md
           - include: ../cloud-databases/reference-logging.md
           - reference-monitoring.md
           - include: ../cloud-databases/reference-sysdig.md
-      - topicgroup: 
+      - topicgroup:
           label: Enhancing security
-          topics: 
-          - learn-security-compliance.md 
+          topics:
+          - learn-security-compliance.md
           - manage-scc.md
           - include: ../cloud-databases/howto-cbr.md
           - include: ../cloud-databases/cbr-tutorial.md
-  - navgroup: 
+  - navgroup:
       id: reference
       topics:
       - link:
@@ -113,22 +114,22 @@ toc:
       - link:
           label: Cloud Databases API
           href: https://cloud.ibm.com/apidocs/cloud-databases-api
-      - topicgroup: 
+      - topicgroup:
           label: Connecting over Private Networks
-          topics: 
+          topics:
           - include: ../cloud-databases/howto-vpes.md
           - include: ../cloud-databases/reference-service-endpoints.md
       - include: ../cloud-databases/reference-key-protect.md
       - include: ../cloud-databases/reference-iam.md
       - include: ../cloud-databases/reference-hpcs.md
       - include: ../cloud-databases/reference-responsibilities.md
-  - navgroup: 
+  - navgroup:
       id: help
-      topics: 
+      topics:
       - ts-connect.md
       - ts-max-connections.md
       - ts-no-space-left.md
-      - ts-long-term-queries.md
+      - queries.md
       - topicgroup:
           label: FAQs
           topics:
