--- a/toc.yaml
+++ b/toc.yaml
@@ -152,10 +152,16 @@ toc:
   - navgroup:
       id: help
       topics:
-      - ts-connect.md
-      - ts-max-connections.md
-      - ts-no-space-left.md
-      - queries.md
+      - topicgroup:
+          label: Troubleshooting
+          topics:
+          - ts-connect.md
+          - ts-max-connections.md
+          - ts-no-space-left.md
+          - queries.md
+          - link:
+              label: Why did my Terraform script delete my instance?
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-troubleshoot-terraform
       - topicgroup:
           label: FAQs
           topics:
