--- a/toc.yaml
+++ b/toc.yaml
@@ -18,7 +18,6 @@ toc:
           label: IBM Cloud Databases
           href: https://cloud.ibm.com/docs/cloud-databases
       - getting-started.md
-      - include: ../cloud-databases/learn-getting-to-production.md
       - link:
           label: What is PostgreSQL?
           href: https://www.ibm.com/cloud/learn/postgresql
@@ -34,7 +33,6 @@ toc:
           label: Databases for PostgreSQL tutorials
           topics:
           - howto-deploy-pgadmin-tutorial.md
-          - include: ../cloud-databases/hello-world-tutorial.md
           - link:
               label: Provision a Databases for PostgreSQL instance with Terraform
               href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-tutorial-provision-postgres-tf
@@ -67,16 +65,16 @@ toc:
       topics:
       - howto-provisioning.md
       - howto-user-management.md
-      - topicgroup:
-          label: IBM Cloud Databases (ICD) enabled by IBM Cloud Satellite
-          topics:
-          - include: ../cloud-databases/howto-sat-loc.md
-          - include: ../cloud-databases/howto-sat-loc-aws.md
-          - include: ../cloud-databases/howto-sat-loc-onprem.md
       - howto-getting-connection-strings.md
-      - include: ../cloud-databases/howto-deprovisioning.md
-      - include: ../cloud-databases/closures.md
-      - include: ../cloud-databases/ha-dr.md
+      - link:
+          label: Deleting your Deployment and Removing your Data
+          href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-deprovisioning
+      - link:
+          label: Migrating resources to a different data center
+          href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-migrate-data-center
+      - link:
+          label: Understanding high availability and disaster recovery for Cloud Databases
+          href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-ha-dr
       - topicgroup:
           label: Connecting to Databases for PostgreSQL
           topics:
@@ -90,9 +88,13 @@ toc:
           - howto-autoscaling.md
           - howto-horizontal-scaling.md
           - howto-managing-connections.md
-      - include: ../cloud-databases/howto-manage-backups.md
+      - link:
+          label: Managing Cloud Databases backups
+          href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-dashboard-backups
       - howto-pitr.md
-      - include: ../cloud-databases/howto-allowlists.md
+      - link:
+          label: Allowlisting
+          href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-allowlisting
       - howto-migration.md
       - topicgroup:
           label: Replication
@@ -115,19 +117,35 @@ toc:
       - topicgroup:
           label: Logging and monitoring
           topics:
-          - include: ../cloud-databases/reference-activity-tracker.md
-          - include: ../cloud-databases/reference-logging.md
           - link:
               label: Monitoring Integration
               href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-monitoring
-          - include: ../cloud-databases/reference-sysdig.md
+          - link:
+              label: Activity Tracker Integration
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-activity-tracker
+          - link:
+              label: Log Analysis Integration
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-logging
+          - link:
+              label: IBM Cloud® Monitoring
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-sysdig-monitor
       - topicgroup:
           label: Enhancing security
           topics:
           - learn-security-compliance.md
-          - manage-scc.md
-          - include: ../cloud-databases/howto-cbr.md
+          - link:
+              label: Managing security and compliance with Cloud Databases
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-manage-security-compliance
+          - link:
+              label: Protecting Cloud Databases resources with context-based restrictions
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-cbr
           - include: ../cloud-databases/cbr-tutorial.md
+      - topicgroup:
+          label: IBM Cloud Databases (ICD) enabled by IBM Cloud Satellite
+          topics:
+          - include: ../cloud-databases/howto-sat-loc.md
+          - include: ../cloud-databases/howto-sat-loc-aws.md
+          - include: ../cloud-databases/howto-sat-loc-onprem.md
   - navgroup:
       id: reference
       topics:
@@ -143,12 +161,24 @@ toc:
       - topicgroup:
           label: Connecting over Private Networks
           topics:
-          - include: ../cloud-databases/howto-vpes.md
-          - include: ../cloud-databases/reference-service-endpoints.md
-      - include: ../cloud-databases/reference-key-protect.md
-      - include: ../cloud-databases/reference-iam.md
-      - include: ../cloud-databases/reference-hpcs.md
-      - include: ../cloud-databases/reference-responsibilities.md
+          - link:
+              label: Virtual Private Endpoints
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-vpes
+          - link:
+              label: Service Endpoints Integration
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-service-endpoints
+          - link:
+              label: Key Protect Integration
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-key-protect
+          - link:
+              label: Identity and Access Management
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-iam
+          - link:
+              label: Hyper Protect Crypto Services Integration
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-hpcs
+          - link:
+              label: Responsibilities for Cloud Databases
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-responsibilities-cloud-databases
   - navgroup:
       id: help
       topics:
@@ -165,7 +195,15 @@ toc:
       - topicgroup:
           label: FAQs
           topics:
-          - include: ../cloud-databases/availability-zones-faq.md
-          - include: ../cloud-databases/status-page-faq.md
-          - include: ../cloud-databases/resource-config-faq.md
-          - include: ../cloud-databases/cert-faq.md
+          - link:
+              label: Availability zones FAQ
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-faq-availability-zones
+          - link:
+              label: IBM Cloud platform and service FAQ
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-ibm-cloud-status
+          - link:
+              label: Resource Configuration FAQ
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-faq-resource-config
+          - link:
+              label: Certificates FAQ
+              href: https://cloud.ibm.com/docs/cloud-databases?topic=cloud-databases-faq-cert
